--- a/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
+++ b/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
@@ -26,16 +26,19 @@
                         <li class="nav-item">
                             <a class="nav-link" href="ListaPokemons.aspx">Lista de Pokémons</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="FormularioPokemon.aspx">Formulario ABM</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="container">
             <hr />
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+            <div>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
         </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
