--- a/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
+++ b/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
@@ -21,17 +21,27 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Default.aspx">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../Default.aspx">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ListaPokemons.aspx">Lista de Pokémons</a>
+                            <a class="nav-link" href="../ListaPokemons.aspx">Lista de Pokémons</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="FormularioPokemon.aspx">Formulario ABM</a>
+                            <a class="nav-link" href="../FormularioPokemon.aspx">Formulario ABM</a>
                         </li>
+                        <%if (Session["usuario"] == null)
+                            { %>
                         <li class="nav-item">
                             <a class="nav-link" href="EjemplosLogin/LoginEjemplo.aspx">Login</a>
                         </li>
+                        <% }%>
+
+                        <% else
+                            { %>
+                        <li class="nav-item">
+                            <asp:button runat="server" Text="Desloguearse" CssClass="nav-link" OnClick="Unnamed_Click"/>
+                        </li>
+                        <%} %>
                     </ul>
                 </div>
             </div>
