--- a/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
+++ b/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
@@ -14,7 +14,7 @@
     <form id="form1" runat="server">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">PokedexWeb</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,25 +24,33 @@
                             <a class="nav-link active" aria-current="page" href="../Default.aspx">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../ListaPokemons.aspx">Lista de Pokémons</a>
+                            <a class="nav-link" href="ListaPokemons.aspx">Lista de Pokémons</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../FormularioPokemon.aspx">Formulario ABM</a>
+                            <a class="nav-link" href="FormularioPokemon.aspx">Formulario ABM</a>
                         </li>
-                        <%if (Session["usuario"] == null)
-                            { %>
                         <li class="nav-item">
-                            <a class="nav-link" href="EjemplosLogin/LoginEjemplo.aspx">Login</a>
+                            <a class="nav-link" href="Contacto.aspx">Contacto</a>
                         </li>
-                        <% }%>
-
-                        <% else
-                            { %>
                         <li class="nav-item">
-                            <asp:button runat="server" Text="Desloguearse" CssClass="nav-link" OnClick="Unnamed_Click"/>
+                            <a class="nav-link" href="Favoritos.aspx">Favoritos</a>
                         </li>
-                        <%} %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="MiPerfil.aspx">Mí perfil</a>
+                        </li>
                     </ul>
+                </div>
+                <div class="ms-auto">
+                    <%if (Session["usuario"] == null)
+                        { %>
+                    <asp:Button CssClass="btn btn-success" ID="btnLoguearse" OnClick="Unnamed_Click1" Text="Login" runat="server" />
+                    <asp:Button CssClass="btn btn-outline-primary" ID="btnRegistrarse" OnClick="btnRegistrarse_Click" Text="Registrarse" runat="server" />
+                    <% }%>
+                    <% else
+
+                        { %>
+                    <asp:Button runat="server" Text="Desloguearse" CssClass="btn btn-outline-danger" OnClick="Unnamed_Click" />
+                    <%} %>
                 </div>
             </div>
         </nav>
