Modificación de atributos varios. Validaciones

--- a/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
+++ b/Aplicacion-Web-ASP/pokedex-ASP/Master.Master
@@ -44,17 +44,18 @@
                 <div class="ms-auto">
                     <%if (!negocio.Seguridad.sesionActiva(Session["usuario"]))
                         { %>
-                    <asp:Button CssClass="btn btn-success" ID="btnLoguearse" OnClick="btnLoguearse_Click" Text="Login" runat="server" />
-                    <asp:Button CssClass="btn btn-outline-primary" ID="btnRegistrarse" OnClick="btnRegistrarse_Click" Text="Registrarse" runat="server" />
+                        <asp:Button CssClass="btn btn-success" ID="btnLoguearse" OnClick="btnLoguearse_Click" Text="Login" runat="server" />
+                        <asp:Button CssClass="btn btn-outline-primary" ID="btnRegistrarse" OnClick="btnRegistrarse_Click" Text="Registrarse" runat="server" />
                     <% }%>
                     <% else
 
                         { %>
-                    <asp:Button runat="server" Text="Desloguearse" ID="btnDesloguearse" OnClick="btnDesloguearse_Click" CssClass="btn btn-outline-danger" />
+                        <asp:Button runat="server" Text="Salir" ID="btnDesloguearse" OnClick="btnDesloguearse_Click" CssClass="btn btn-outline-danger" />
+                        <asp:Label ID="lblUser" Text="user" CssClass="text-dark m-auto me-2" runat="server" />
                     <%} %>
-                        <asp:Image ID="imgAvatar" 
-                            ImageUrl="..." style="height:40px; width:40px; border-radius:50%;"
-                            runat="server" CssClass="rounded-circle ms-2" />
+                        <asp:Image ID="imgAvatar"
+                            Style="height: 40px; width: 40px; border-radius: 50%;"
+                            runat="server" />
                 </div>
         </nav>
         <div class="container">
